# collections

./: .gitignore  README.md  azure-pipelines.yml  db.py  main.py  notes.md  requirements.txt  utils.py
.github/workflows/: deploy.yml
api/: main.py
backend/: .gitignore  pyproject.toml
backend/app/: notes.md
postcall/: main.py
postcall/tools/: actionitems.py  categorization.py  summary.py
prompt/: call_one.py  call_two.py
