[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
     "azure-cosmos>=4.15.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "pipecat-ai[azure,local,silero]>=0.0.105",
    "websockets>=16.0",
]
